# cfv

./: .cvsignore  .travis.yml  Changelog  MANIFEST.in  Makefile  README  README.md  Release.md  cfv  cfv.1  cfv.bat  cfv.nsi  pyproject.toml  requirements.txt  setup-py2exe.py  setup.py
.github/workflows/: ci-python3-freebsd.yml  ci-python3.yml  main.yml
debian/: README.Debian  changelog  control  copyright  dirs  docs  postinst  prerm  rules
lib/cfv/: caching.py  cftypes.py  common.py  compat.py  fileutil.py  hash.py  osutil.py  progress.py  strutil.py  term.py  ui.py
test/: benchmark.py  cfv  cfvtest.py  foo.torrent  test.csv  test.csv2  test.csv4  test.par  test.py  test.sfv  test.sfvmd5  test.vol0+1.par2  test_bencode.py  test_caching.py  test_stringops.py  test_strutil.py  testcase.csv  testcomments.md5  testcrcrlf.crc  testcrcrlf.csv  testcrcrlf.csv4  testcrcrlf.sfv  testcrcrlf.sha1  testcrlf.csv  testcrlf.csv2  testcrlf.sfv  testdrivestripquoted.md5  testencoding.torrent  testencoding2.torrent.foo  testfix.csv  testnodims.crc  testnoheader.sfv  testnosize.crc  testnosizenodimsnodesc.crc  testquoted.csv4  testquoted.sfv  testsmallpiece.torrent  teststrip-1.csv4  teststrip-none.csv4  teststrip0.csv4  (+3 more)
test/bigfile/: bigfile.crc  bigfile.sfv  bigfile.sfvmd5  bigfile.sha1
test/bigfile2/: bigfile2.par  bigfile2.par2  bigfile2.sfv  bigfile2.sha1  bigfile2.torrent
test/fifotest/: fifo.bsdmd5
test/foo/: foo2
test/foo2err1/: foo2  foo4
test/testdata/: data3  data4  test.bsdmd5  test.crc  test.md5  test.p01  test.par2  test.sha1  test.sha224  test.sha256  (+29 more)
(+22 files in other folders)
